crates/sema/tests/snapshots/check__snapshot_main_with_parameters.snap
---
source: crates/sema/tests/check.rs
expression: "err(\"fn main(argc: int):\\n    print(argc)\\n\")"
---
error: `main` must not take parameters
 --> main.ty:1:9
  |
1 | fn main(argc: int):
  |         ^^^^^^^^^ unexpected parameter
