crates/sema/tests/snapshots/check__snapshot_optional_needs_narrowing.snap
---
source: crates/sema/tests/check.rs
expression: "err(\"class Node:\\n    next: Node | None\\n\\nfn main():\\n    n = Node(next=None)\\n    print(n.next.next)\\n\")"
---
error: `Node | None` may be `None` here
 --> main.ty:6:11
  |
6 |     print(n.next.next)
  |           ^^^^^^ this is `Node | None`, not `Node`
  |
  = note: M2 narrows only inside an `if`; it does not flow through `and`, `or` or a loop condition, see DESIGN.md section 3.8
  = help: narrow it first: assign it to a local, then test it in an `if` with `x is None` / `x is not None`
